<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".views.home.HomeActivity"
    tools:showIn="@layout/activity_home">

    <LinearLayout
        android:padding="10dp"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <TextView
            android:id="@+id/lbl_expiration_points"
            android:text="@string/app_name"
            android:textSize="24sp"
            android:textColor="@color/colorPrimary"
            android:textStyle="bold"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView
            android:id="@+id/lbl_expiration_date"
            android:text="@string/app_name"
            android:textSize="14sp"
            android:textColor="@color/colorPrimary"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView
            android:text="@string/lbl_redeem"
            android:textSize="14sp"
            android:textColor="@color/secondaryText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <android.support.v7.widget.CardView
            android:id="@+id/card_one"
            app:cardElevation="1dp"
            app:cardCornerRadius="4dp"
            android:layout_margin="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <RelativeLayout
                android:padding="4dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <ImageView
                    android:src="@drawable/image_one"
                    android:scaleType="centerCrop"
                    android:contentDescription="@string/app_name"
                    android:layout_width="match_parent"
                    android:layout_height="100dp" />
                <TextView
                    android:text="@string/lbl_option_one"
                    android:textColor="@color/icons"
                    android:textAlignment="textEnd"
                    android:layout_alignParentBottom="true"
                    android:background="@color/shadow"
                    android:layout_width="match_parent"
                    android:layout_height="30dp"/>
            </RelativeLayout>
        </android.support.v7.widget.CardView>
        <android.support.v7.widget.CardView
            android:id="@+id/card_two"
            app:cardElevation="1dp"
            app:cardCornerRadius="4dp"
            android:layout_margin="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <RelativeLayout
                android:padding="4dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <ImageView
                    android:src="@drawable/image_two"
                    android:scaleType="centerCrop"
                    android:contentDescription="@string/app_name"
                    android:layout_width="match_parent"
                    android:layout_height="100dp" />
                <TextView
                    android:text="@string/lbl_option_two"
                    android:textColor="@color/icons"
                    android:textAlignment="textEnd"
                    android:layout_alignParentBottom="true"
                    android:background="@color/shadow"
                    android:layout_width="match_parent"
                    android:layout_height="30dp"/>
            </RelativeLayout>
        </android.support.v7.widget.CardView>
        <android.support.v7.widget.CardView
            android:id="@+id/card_three"
            app:cardElevation="1dp"
            app:cardCornerRadius="4dp"
            android:layout_margin="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <RelativeLayout
                android:padding="4dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <ImageView
                    android:src="@drawable/image_three"
                    android:scaleType="centerCrop"
                    android:contentDescription="@string/app_name"
                    android:layout_width="match_parent"
                    android:layout_height="100dp" />
                <TextView
                    android:text="@string/lbl_option_three"
                    android:textColor="@color/icons"
                    android:textAlignment="textEnd"
                    android:layout_alignParentBottom="true"
                    android:background="@color/shadow"
                    android:layout_width="match_parent"
                    android:layout_height="30dp"/>
            </RelativeLayout>
        </android.support.v7.widget.CardView>
    </LinearLayout>

</android.support.v4.widget.NestedScrollView>