<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".views.home.HomeActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="180dp"
        android:background="?attr/colorPrimary"
        app:popupTheme="@style/AppTheme.PopupOverlay">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="180dp">
            <LinearLayout
                android:orientation="vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <TextView
                    android:id="@+id/lbl_points"
                    android:text="@string/app_name"
                    android:textSize="26sp"
                    android:textColor="@color/icons"
                    android:textStyle="bold"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                <TextView
                    android:id="@+id/lbl_my_points"
                    android:text="@string/lbl_my_points"
                    android:textSize="16sp"
                    android:textColor="@color/icons"
                    android:textStyle="bold"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>
            <TextView
                android:id="@+id/lbl_name"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="15dp"
                android:text="@string/app_name"
                android:textSize="18sp"
                android:textColor="@color/icons"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:ignore="RelativeOverlap" />
        </RelativeLayout>
    </android.support.v7.widget.Toolbar>
    <LinearLayout
        android:orientation="vertical"
        android:layout_marginTop="100dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <TextView
            android:text="@string/lbl_redeem_points"
            android:textSize="14sp"
            android:textColor="@color/icons"
            android:textAllCaps="true"
            android:layout_marginBottom="4dp"
            android:layout_marginStart="50dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <android.support.v7.widget.CardView
            app:cardCornerRadius="10dp"
            app:cardElevation="8dp"
            app:cardBackgroundColor="@color/dividerLight"
            android:id="@+id/card_menu"
            android:layout_marginStart="35dp"
            android:layout_marginEnd="35dp"
            android:layout_marginBottom="20dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <include layout="@layout/content_home" />
        </android.support.v7.widget.CardView>
    </LinearLayout>

</RelativeLayout>