<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/card_item"
    android:layout_width="match_parent"
    android:layout_height="160dp"
    android:layout_margin="5dp"
    app:cardPreventCornerOverlap="true"
    app:cardUseCompatPadding="true"
    app:cardCornerRadius="6dp"
    app:cardElevation="2dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <com.makeramen.roundedimageview.RoundedImageView
            android:id="@+id/img_item"
            android:src="@drawable/avatar_services"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/app_name"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_marginStart="10dp"
            android:layout_centerInParent="true"
            android:layout_alignParentStart="true"
            android:adjustViewBounds="true"
            android:scaleType="centerCrop"
            app:riv_corner_radius="6dp"/>
        <LinearLayout
            android:layout_centerInParent="true"
            android:layout_marginStart="10dp"
            android:layout_toEndOf="@+id/img_item"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/lbl_name_product"
                android:text="@string/app_name"
                android:textColor="@color/primaryText"
                android:textSize="22sp"
                android:textStyle="bold"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <TextView
                android:id="@+id/lbl_value_product"
                android:text="@string/app_name"
                android:textColor="@color/secondaryText"
                android:textSize="18sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <TextView
                android:id="@+id/lbl_points_product"
                android:text="@string/app_name"
                android:textColor="@color/secondaryText"
                android:textSize="18sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <LinearLayout
                android:layout_marginTop="4dp"
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <Button
                    android:id="@+id/but_redimir"
                    android:text="@string/but_redimir"
                    android:textAllCaps="false"
                    android:textColor="@color/secondaryText"
                    android:textSize="12sp"
                    android:background="@drawable/background_button_cancel"
                    android:layout_width="60dp"
                    android:layout_height="30dp"
                    tools:ignore="ButtonStyle" />
                <Button
                    android:id="@+id/but_crowfunding"
                    android:text="@string/but_crowfunding"
                    android:textAllCaps="false"
                    android:textColor="@color/icons"
                    android:textSize="12sp"
                    android:background="@drawable/background_button_ok"
                    android:layout_marginStart="5dp"
                    android:layout_width="wrap_content"
                    android:layout_height="30dp"
                    tools:ignore="ButtonStyle" />
            </LinearLayout>
        </LinearLayout>
    </RelativeLayout>

</android.support.v7.widget.CardView>